--- a/css/styles.css
+++ b/css/styles.css
@@ -15,22 +15,22 @@ a {
 /*-------Header-------*/
 
 .header-nav-logo {
-    font-family: Raleway;
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 117%;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #2E2F42;
+    color: #4d5ae5;
 }
 
-.header-logo-accent {font-family: Raleway;
+.header-logo-accent {font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 117%;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4D5AE5; }
+    color: #2e2f42; }
 
 .header-nav-link {
 font-weight: 500;
@@ -47,6 +47,7 @@ font-size: 16px;
 line-height: 150%;
 letter-spacing: 0.02em;
 color: #434455;
+font-style: normal;
 }
 
 .header-address-link:hover, .header-address-link:focus {color: #404BBF;}
@@ -72,7 +73,10 @@ color: #434455;
     line-height: 150%;
     letter-spacing: 0.04em;
     color: #FFFFFF;
-    cursor: pointer;}
+    cursor: pointer;
+    background-color: #4D5AE5;}
+
+.hero-btn:hover, .hero-btn:focus {background-color: #404BBF;}
 
 
 .feature-subtitle {
@@ -95,7 +99,11 @@ color: #434455;
     line-height: 111%;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #2E2F42;}
+    color: #2E2F42;
+    text-transform: capitalize;
+}
+
+.team-item {background-color: #FFFFFF;}
 
 
 .team-member-name {font-weight: 500;
@@ -119,6 +127,7 @@ color: #434455;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2E2F42;
+    text-transform: capitalize;
 }
 
 .portfolio-item-name {font-weight: 500;
@@ -137,23 +146,25 @@ color: #434455;
 
 .footer {background-color: #2E2F42;}
 
-.footer-logo {font-family: Raleway;
+.footer-logo {font-family: "Raleway",
+    sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 117%;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #F4F4FD;}
-
-.footer-logo-accent {font-family: Raleway;
+    color: #4d5ae5;}
+    
+.footer-logo-accent {font-family: "Raleway",
+    sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 117%;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4D5AE5;}
+    color: #f4f4fd;}
 
 .footer-text {font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
-    color: #F4F4FD;}
+    color: #f4f4fd;}
