--- a/css/styles.css
+++ b/css/styles.css
@@ -42,12 +42,13 @@ color: #2E2F42;
 
 .header-nav-link:hover, .header-nav-link:focus {color: #404BBF;}
 
+.header-address {font-style: normal;}
+
 .header-address-link {
 font-size: 16px;
 line-height: 150%;
 letter-spacing: 0.02em;
 color: #434455;
-font-style: normal;
 }
 
 .header-address-link:hover, .header-address-link:focus {color: #404BBF;}
